# svr

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/: quart.py
svr/: app.py  cli.py  database.py  db_schema.py  defaults.py  jinjafilters.py  queries.py
svr/static/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
svr/static/font/: fontello.eot
svr/static/js/: vehicle-page.js
svr/templates/: index.html.j2  layout.html.j2  vehicle-details.html.j2  vehicles.html.j2
svr/templates/components/: grid.html.j2  navbar.html.j2  table.html.j2  vehiclecard.html.j2
